--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
             <h3 class="text-2xl font-bold text-left mb-2 section-title ml-8">2.1. Ticket Queries by Review Stage</h3>
             <!-- New graph and description inserted here -->
             <p class="text-left text-gray-600 mb-8 ml-8">
-                We analysed support ticket volumes by platform stage to identify where users most frequently encounter issues. The <strong>Screening</strong> stage (including Title and Abstract Screening and Full Text Review) continues to generate the highest number of queries, followed closely by <strong>Import</strong> and <strong>DE2</strong>, highlighting these as key priority areas for users. <strong>Notably, tickets tagged DE1 are steadily increasing and are now approaching the top five most common platform stage-related issues.</strong>
+                We analysed support ticket volumes by platform stage to identify where users most frequently encounter issues. The <strong>Screening</strong> stage (including Title and Abstract Screening and Full Text Review) continues to generate the highest number of queries, followed closely by <strong>Import</strong> and <strong>DE2</strong>, highlighting these as key priority areas for users. <strong>Notably, tickets tagged with DE1 are steadily increasing and are now approaching the top five most common platform stage-related issues.</strong>
             </p>
             <section class="card graph-container ml-8">
                 <div class="bar-wrapper">
