--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Community Pulse: 01 July 2024 to 30 June 2025 Report</title>
+    <title>Community Pulse: July 2024 to June 2025 Report</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -297,7 +297,7 @@
     <header class="bg-[#EEF5FF] shadow-md">
         <div class="container mx-auto px-6 py-8 text-center">
             <!-- Replaced SVG with JPG image -->
-            <img src="https://raw.githubusercontent.com/TenCovidence/Community-Pulse/main/Community%20Pulse%20Logo.jpg"
+            <img src="https://www.canva.com/design/DAGrdnMq8lE/aiXyHTmhoqm4eP0OtGIsqA/view?utm_content=DAGrdnMq8lE&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h78da57d695"
                  alt="Community Pulse ECG Logo"
                  class="header-image"
                  onerror="this.onerror=null; this.src='https://placehold.co/250x60/cccccc/333333?text=Logo+Error';">
