--- a/index.html
+++ b/index.html
@@ -986,7 +986,7 @@
                     <li class="flex items-start"><span class="text-xl mr-3" style="color: #003f5c;">&#9733;</span><span>Filter studies by the presence or absences of tags</span></li>
                     <li class="flex items-start"><span class="text-xl mr-3" style="color: #003f5c;">&#9733;</span><span>DE1 single reviewer mode <span class="text-green-600">(Live)</span></span></li>
                     <li class="flex items-start"><span class="text-xl mr-3" style="color: #003f5c;">&#9733;</span><span>Hide/unhide Notes</span></li>
-                    <li class="flex items-start"><span class="text-xl mr-3" style="color: #003f5c;">&#9733;</span><span>Ability to change the QA judgements</span></li>
+                    <li class="flex items-start"><span class="text-xl mr-3" style="color: #003f5c;">&#9733;</span><span>Ability to change the QA1 judgements</span></li>
                     <li class="flex items-start"><span class="text-xl mr-3" style="color: #003f5c;">&#9733;</span><span>Hide journal name/authors during screening</span></li>
                     <li class="flex items-start"><span class="text-xl mr-3" style="color: #003f5c;">&#9733;</span><span>Start from scratch QA template</span></li>
                     <li class="flex items-start"><span class="text-xl mr-3" style="color: #003f5c;">&#9733;</span><span>Export to Excel when using DE1 <span class="text-green-600">(Live)</span></span></li>
