--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #f0f4f8; /* Light grey background */
+            background-color: #eef5ff; /* Light grey background */
             color: #333; /* Default text color */
         }
         .container {
